Bug 492081: In SVG Animation (SMIL), update pause start time during setCurrentTime calls. r+sr=roc